Minor FAQ updates, markup cleanup, and link to faq.html again from index.html.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -32,7 +32,7 @@ page</a>.</p>
   <li><a href="#general">General information</a>
   <ol>
      <li><a href="#gcc">What is the relationship between GCC and EGCS?</a></li>
-     <li><a href="#cygnus">What is the relationship between GCC and Cygnus?</a></li>
+     <li><a href="#cygnus">What is the relationship between GCC and Cygnus / Red Hat?</a></li>
      <li><a href="#open-development">What is an open development model?</a></li>
      <li><a href="#bugreport">How do I report a bug?</a></li>
      <li><a href="#support">How do I get a bug fixed or a feature added?</a></li>
@@ -105,18 +105,18 @@ was formed in 1997.</p>
 <p>In April 1999 the Free Software Foundation officially halted
 development on the gcc2 compiler and appointed the EGCS project as the
 official GCC maintainers. The net result was a single project which
-will carry forward GCC development under the ultimate control of the
+carries forward GCC development under the ultimate control of the
 <a href="steering.html">GCC Steering Committee</a>.</p>
 
 
 <hr>
-<h2><a name="cygnus">What is the relationship between GCC and Cygnus</a></h2>
+<h2><a name="cygnus">What is the relationship between GCC and Cygnus / Red Hat</a></h2>
 
-<p>It is a common mis-conception that Cygnus controls GCC either
+<p>It is a common mis-conception that Red Hat controls GCC either
 directly or indirectly.</p>
 
-<p>While Cygnus does donate hardware, network connections, code and
-developer time to GCC development, Cygnus does not control GCC.
+<p>While Red Hat does donate hardware, network connections, code and
+developer time to GCC development, Red Hat does not control GCC.
 
 <p>Overall control of GCC is in the hands of the
 <a href="steering.html">GCC Steering Committee</a>
@@ -125,16 +125,16 @@ backgrounds.  The purpose of the steering committee is to make
 decisions in the best interest of GCC and to help ensure that no
 individual or company has control over the project.</p>
 
-<p>To summarize, Cygnus contributes to GCCproject, but does not exert
+<p>To summarize, Red Hat contributes to the GCC project, but does not exert
 a controlling influence over GCC.</p>
 
 <hr>
 <h2><a name="open-development">What is an open development model?</a></h2>
 
-<p>With GCC, we are going to try a bazaar style
+<p>We are using a bazaar style
 <a href="#cathedral-vs-bazaar"><b>[1]</b></a> 
-approach to its development: We make snapshots publicly available to
-anyone who wants to try them; we're going to welcome anyone to join
+approach to GCC development: we make snapshots publicly available to
+anyone who wants to try them; we welcome anyone to join
 the development mailing list.  All of the discussions on the
 development mailing list are available via the web.  We're going to be
 making releases with a much higher frequency than they have been made
@@ -160,9 +160,9 @@ be integrated--code that is simply ill-conceived won't be.</p>
 process; FreeBSD, the Emacs lisp repository, and the Linux kernel are
 a few examples of the bazaar style of development.</p>
 
-<p>With GCC, we will be adding new features and optimizations at a
+<p>With GCC, we are adding new features and optimizations at a
 rate that has not been done since the creation of gcc2; these
-additions will inevitably have a temporarily destabilizing effect.
+additions inevitably have a temporarily destabilizing effect.
 With the help of developers working together with this bazaar style
 development, the resulting stability and quality levels will be better
 than we've had before.</p>
@@ -174,7 +174,7 @@ than we've had before.</p>
   terms:  A <b>cathedral</b> development model versus a <b>bazaar</b>
   development model.  The paper is written by Eric S. Raymond, it is
   called ``<a
-  href="http://locke.ccil.org/~esr/writings/cathedral.html">The
+  href="http://www.tuxedo.org/~esr/writings/cathedral-bazaar/">The
   Cathedral and the Bazaar</a>''.  The paper is a useful starting point
   for discussions.
 </blockquote>
@@ -183,7 +183,7 @@ than we've had before.</p>
 <hr>
 <h2><a name="bugreport">How do I report a bug?</a></h2>
 
-<p>There are complete instructions <a href = "bugs.html">here</a>.</p>
+<p>There are complete instructions <a href="bugs.html">here</a>.</p>
 
 
 <hr>
@@ -209,7 +209,7 @@ disadvantages.</p>
     from a commercial support organization since the people who read
     gcc-bugs, if they choose to help you, will be volunteering their
     time.  This alternative will work best if you follow the directions
-    on <a href="#bugreport">submitting bugreports</a>.</li>
+    on <a href="bugs.html">submitting bugreports</a>.</li>
 
 <li>Fix it yourself.  This alternative will probably bring results,
     if you work hard enough, but will probably take a lot of time,
@@ -223,9 +223,8 @@ disadvantages.</p>
 <h2><a name="noncvs">How can I get a development environment for GCC
 without using CVS?</a></h2>
 
-<p>GCC snapshots are available from the FTP server and its mirrors, e.g.
-<a href="ftp://ftp.fu-berlin.de/unix/languages/egcs/snapshots/">
-  ftp://ftp.fu-berlin.de/unix/languages/egcs/snapshots/</a></p>
+<p>GCC snapshots are available from the FTP server and its mirrors;
+see the <a href="mirrors.html">GCC mirror list</a>.
 
 
 <hr>
@@ -352,7 +351,7 @@ the GNU versions of those programs.</p>
 <p>To ensure that GCC finds the GNU assembler (the GNU loader), which
 are required by <a href="install/specific.html">some configurations</A>,
 you should configure these with the same --prefix option as you used
-for GCC.  Then build & install GNU as (GNU ld) and proceed with
+for GCC.  Then build &amp; install GNU as (GNU ld) and proceed with
 building GCC.</p>
 
 <p>Another alternative is to create links to GNU as and ld in any of
@@ -412,13 +411,11 @@ test the <code>-fssa</code> option, you could bootstrap like this:
 <p>The GCC testsuite is not included in the GCC 2.95 release due to the
 uncertain copyright status of some tests.</p>
 
-<p>The GCC team will be reviewing the entire testsuite to find and remove
-any tests with uncertain copyright status.  Once those tests are removed
-from the testsuite, the testsuite as a whole will be copyrighted under the
-terms of the GPL and included in future GCC releases.</p>
-
-<p>It is believed that only a few tests have uncertain copyright status and
-thus only a few tests will need to be removed from the testsuite.</p>
+<p>The GCC team has reviewed the entire testsuite to find and remove
+any tests with uncertain copyright status, following guidelines from
+Prof. Eben Moglen.  The testsuite is included in GCC 3.0 and
+subsequent releases.  Only a few tests needed to be removed from the
+testsuite.</p>
 
 
 <hr>
@@ -475,11 +472,11 @@ if it works for earlier versions of GCC or other compilers.  The
 following problems with some releases of widely used packages have
 been identified:</p>
 
-<p>There is a separate <a href="bugs.html">list of well-known bugs</a>
+<p>There is a separate <a href="bugs.html#known">list of well-known bugs</a>
 describing known deficiencies. Naturally we'd like that list to be of
 zero length.</p>
 
-<p>To report a bug, see <a href="#bugreport">How to report bugs</a>.</p>
+<p>To report a bug, see <a href="bugs.html">How to report bugs</a>.</p>
 
 <hr>
 <h2><a name="stdin">Why can't I initialize a static variable with <tt>stdin</tt>?</a></h2>
@@ -508,7 +505,7 @@ main.</p>
 <p>There is a common misconception that the GCC developers are
 responsible for GNU libc.  These are in fact two entirely separate
 projects.  The appropriate place to ask questions relating to GNU libc
-is <a href="mailto:libc-alpha@sourceware.cygnus.com">libc-alpha@sourceware.cygnus.com</a>.
+is <a href="mailto:libc-alpha@sources.redhat.com">libc-alpha@sources.redhat.com</a>.
 </p>
 
 <hr>
@@ -583,19 +580,22 @@ example</p>
 <p>This is a bit more typing, but I personally think it's better style
 in addition to being more portable.
 
+<p>In recent versions of glibc, <code>printf</code> is among the
+functions which are implemented as macros.
+
 <h2><a name="rounding">Problems with floating point computations</a></h2>
 
 <p>In a number of cases, GCC appears to perform floating point
 computations incorrectly. For example, the program</p>
 <pre>
-#include <iostream.h>
+#include &lt;iostream.h&gt;
 
 main() {
 
  double min = 0.0;
  double max = 0.5;
  double width = 0.01;
- cout <<  (int)(((max - min) / width) - 1) << endl;
+ cout &lt;&lt;  (int)(((max - min) / width) - 1) &lt;&lt; endl;
 
 }
 </pre>
@@ -735,12 +735,13 @@ you may also need to obtain development versions of some GNU tools, as
 the production versions do not necessarily handle all features needed
 to rebuild GCC.</p>
 
-<p>Autoconf is available from
-<a href="http://sourceware.cygnus.com/autoconf/">
-http://sourceware.cygnus.com/autoconf/</a>; have a look at
-<a href="ftp://gcc.gnu.org/pub/egcs/infrastructure/">
-ftp://gcc.gnu.org/pub/egcs/infrastructure/</a> for the other packages.
-</p>
+<p>In general, the current versions of these tools from <a
+href="ftp://ftp.gnu.org/gnu/">ftp://ftp.gnu.org/gnu/</a> will work.
+At present, Autoconf 2.50 is not supported, and you will need to use
+Autoconf 2.13; work is in progress to fix this problem.  Also look at
+<a href="ftp://gcc.gnu.org/pub/gcc/infrastructure/">
+ftp://gcc.gnu.org/pub/gcc/infrastructure/</a> for any special versions
+of packages.</p>
 
 <hr>
 <h2><a name="conflicts">Conflicts when using cvs update</a></h2>
@@ -764,17 +765,9 @@ a copy of gdb-4.17 to work around the problem.
 
 <hr>
 <h2><a name="gnat">Using GCC with GNAT/Ada </a></h2>
-<p>The GNU Ada front-end is not currently supported by GCC; however, it is
-possible to build the GNAT compiler with a little work.</p>
-
-<p>First, retrieve the gnat-3.10p sources.  The sources for the Ada front
-end and runtime all live in the "ada" subdirectory.  Move that subdirectory
-to egcs/gcc/ada.</p>
-
-<p>Second, apply the patch found in egcs/gcc/README.gnat.</p>
-
-<p>Finally, rebuild per the GNAT build instructions.</p>
-
+<p>The GNU Ada front-end is not currently supported by GCC, but work
+is in progress to integrate GNU Ada into the GCC CVS repository and
+produce new releases based on current versions of GCC.</p>
 
 <hr>
 <h2><a name="cvssnapshots">Using CVS to download snapshots</a></h2>
@@ -815,6 +808,9 @@ support PIC in this manner.  For example:</p>
 <hr>
 <h2><a name="squangle">How to work around too long C++ symbol names
 (<tt>-fsquangle</tt>)</a></h2>
+
+<p>This question does not apply to GCC 3.0 or later versions, which
+have a new C++ ABI with much shorter mangled names.</p>
 
 <p>If the standard assembler of your platform can't cope with the
 large symbol names that the default g++ name mangling mechanism
