--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -34,7 +34,7 @@
 </TD></TR>
 <TR BGCOLOR="#FFFFBB"><TD>
 <P>
-<A HREF="http://gcc.gnu.org/cgi-bin/fom">FAQ</A><BR>
+<A HREF="http://gcc.gnu.org/faq.html">FAQ</A><BR>
 <A HREF="install/index.html">Installation</A><BR>
 <A HREF="install/specific.html">Platforms</A><BR>
 <A HREF="onlinedocs/">Manual</A><BR>
