2001-06-16  Rich Churcher  <churcher@ihug.com.au>
	* cvs.html: Added "Conflicts when using cvs update" section from
	GCC FAQ.
	* faq.html: Minor punctuation changes to some titles.
	Updated C++ sample code in "Problems with floating point
	computations" in case anyone tries to compile it.
	Created "Older versions of GCC and EGCS" section, moved one
	question to this and added another from FOM.
	Removed question from index which is no longer in FAQ body.
	Removed questions to do with snapshots and CVS (these are now in
	snapshots.html and cvs.html, respectively).
	* snapshots.html: Added text removed from the GCC FAQ section
	"Snapshots: how, when, why".
	Corrected "base" -> "basis".

2001-06-16  Joseph S. Myers  <jsm28@cam.ac.uk>

	* lists.html: Link to spam.html.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -90,6 +90,18 @@ are often already available on many  systems, and can often be found
 already built for some systems.  A partial list of these build tools
 is: Autoconf, Bison, Xgettext, Automake, and Gperf.</p>
 
+<hr>
+<h2>Conflicts when using cvs update</a></h2>
+
+<p>It is not uncommon to get CVS conflict messages for some generated files
+when updating your local sources from the CVS repository.  Typically such
+conflicts occur with bison or autoconf generated files.</p>
+
+<p>As long as you haven't been making modifications to the generated files
+or the generator files, it is safe to delete the offending file, then run
+cvs update again to get a new copy.</p>
+
+
 <h3>CVS tags and checkouts</h3>
 
 <p> You can check out the latest version of the GCC 2.95 release
