--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -246,6 +246,9 @@ e-mail addresses.  It isn't perfect, but short of destructively modifying
 addresses or omitting addresses altogether, there isn't a whole lot we
 can do right now.
 
+<p>See also <a href="spam.html">information about dealing with spam on
+the lists</a>.</p>
+
 <a name="searchbox"></a>
 <!--#include virtual="/searchbox.ihtml"-->
 
