--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -52,7 +52,6 @@ page</a>.</p>
 
   <li><a href="#testsuite">Testsuite problems</a>
   <ol>
-    <li><a href="#testsuite">Why is there no testsuite in GCC 2.95</a></li>
     <li><a href="#dejagnu">Unable to run the testsuite</a></li>
     <li><a href="#testoptions">How do I pass flags like
         <code>-fnew-abi</code> to the testsuite?</a></li>
@@ -66,22 +65,25 @@ page</a>.</p>
     <li><a href="#rounding">Problems with floating point computations</a></li>
   </ol></li>
 
+  <li><a href="#old">Older versions of GCC or EGCS</a></li>
+  <ol>
+    <li><a href="#2.95suite">Why is there no testsuite in GCC 2.95?</a></li>
+    <li><a href="#2.95sstream">Is there a stringstream / sstream for gcc 2.95.2?</a></li> 
+  </ol></li>
+
   <li><a href="#misc">Miscellaneous</a>
   <ol>
     <li><a href="#memexhausted">Virtual memory exhausted</a></li>
-    <li><a href="#snapshot">Snapshots, how, when, why</a></li>
     <li><a href="#friend">Friend Templates</a></li>
-    <li><a href="#generated_files">Why do I need autoconf, bison, xgettext, automake, etc </a></li>
+    <li><a href="#generated_files">Why do I need autoconf, bison, xgettext, automake, etc?</a></li>
     <li><a href="#gdb">Problems debugging GCC code</a></li>
-    <li><a href="#conflicts">Conflicts when using cvs update </a></li>
     <li><a href="#gnat">Using GCC with GNAT/Ada</a></li>
-    <li><a href="#cvssnapshots">Using CVS to download snapshots </a></li>
     <li><a href="#picflag-needed">Why can't I build a shared library?</a></li>
-    <li><a href="spam.html">Dealing with spam on the lists</a></li>
     <li><a href="#squangle">How to work around too long C++ symbol names? 
 	 (<tt>-fsquangle</tt>)</a></li>
     <li><a href="#vtables">When building C++, the linker says my constructors, destructors or virtual tables are undefined, but I defined them</a></li>
     <li><a href="#libstdc++">What is libstdc++-v3 and how can I use it with g++?</a></li>
+    <li><a href="#incremental">Will GCC someday include an incremental linker?</a></li>
   </ol></li>
 </ol>
 
@@ -90,7 +92,7 @@ page</a>.</p>
 <a name="general"></a>
 <h1>General information</h1>
 
-<h2><a name="gcc">What is the relationship between GCC and EGCS</a></h2>
+<h2><a name="gcc">What is the relationship between GCC and EGCS?</a></h2>
 
 <p>In 1990/1991 gcc version 1 had reached a point of stability.  For the
 targets it could support, it worked well.  It had limitations inherent in
@@ -110,7 +112,7 @@ carries forward GCC development under the ultimate control of the
 
 
 <hr>
-<h2><a name="cygnus">What is the relationship between GCC and Cygnus / Red Hat</a></h2>
+<h2><a name="cygnus">What is the relationship between GCC and Cygnus / Red Hat?</a></h2>
 
 <p>It is a common mis-conception that Red Hat controls GCC either
 directly or indirectly.</p>
@@ -406,19 +408,6 @@ test the <code>-fssa</code> option, you could bootstrap like this:
 <a name="testsuite"></a>
 <h1>Testsuite problems</h1>
 
-<h2><a name="testsuite">Why is there no testsuite in GCC 2.95</a></h2>
-
-<p>The GCC testsuite is not included in the GCC 2.95 release due to the
-uncertain copyright status of some tests.</p>
-
-<p>The GCC team has reviewed the entire testsuite to find and remove
-any tests with uncertain copyright status, following guidelines from
-Prof. Eben Moglen.  The testsuite is included in GCC 3.0 and
-subsequent releases.  Only a few tests needed to be removed from the
-testsuite.</p>
-
-
-<hr>
 <h2><a name="dejagnu">Unable to run the testsuite</a></h2>
 
 <p>If you get a message about unable to find "standard.exp" when trying to
@@ -588,14 +577,14 @@ functions which are implemented as macros.
 <p>In a number of cases, GCC appears to perform floating point
 computations incorrectly. For example, the program</p>
 <pre>
-#include &lt;iostream.h&gt;
+#include &lt;iostream&gt;
 
-main() {
+int main() {
 
  double min = 0.0;
  double max = 0.5;
  double width = 0.01;
- cout &lt;&lt;  (int)(((max - min) / width) - 1) &lt;&lt; endl;
+ std::cout &lt;&lt;  (int)(((max - min) / width) - 1) &lt;&lt; std::endl;
 
 }
 </pre>
@@ -613,6 +602,28 @@ the float and double types. Please study
 for more information.</p>
 
 <hr>
+<a name="old"></a>
+<h1>Older versions of GCC and EGCS</h1>
+
+<h2><a name="2.95suite">Why is there no testsuite in GCC 2.95?</a></h2>
+
+<p>The GCC testsuite is not included in the GCC 2.95 release due to the
+uncertain copyright status of some tests.</p>
+
+<p>The GCC team has reviewed the entire testsuite to find and remove
+any tests with uncertain copyright status, following guidelines from
+Prof. Eben Moglen.  The testsuite is included in GCC 3.0 and
+subsequent releases.  Only a few tests needed to be removed from the
+testsuite.</p>
+
+<hr>
+<h2><a name="2.95sstream">Is there a stringstream / sstream for gcc 2.95.2?</a></h2>
+
+<p>Yes, it's at: 
+<a href="http://gcc.gnu.org/ml/libstdc++/2000-q2/msg00700/sstream">
+  http://gcc.gnu.org/ml/libstdc++/2000-q2/msg00700/sstream</a>.<p>
+
+<hr>
 <a name="misc"></a>  
 <h1>Miscellaneous</h1>
 
@@ -626,32 +637,6 @@ consider trying to simplify your files or reducing the optimization level.</p>
 amount of memory needed for template-heavy C++ code, such as code that uses
 STL.  Also note that -Wall includes -Wreturn-type, so if you use -Wall you
 will need to specify -Wno-return-type to turn it off.</p>
-
-
-<hr>
-<h2><a name="snapshot">Snapshots, how, when, why</a></h2>
-<p> We make snapshots of the GCC sources about once a week; there is no
-predetermined schedule.  These snapshots are intended to give everyone
-access to work in progress.  Any given snapshot may generate incorrect code
-or even fail to build.</p>
-
-<p>If you plan on downloading and using snapshots, we highly recommend you
-subscribe to the GCC mailing lists.  See <a href="lists.html">
-mailing lists</a> on the main GCC page for instructions on how to subscribe.</p>
-
-<p>When using the diff files to update from older snapshots to newer snapshots,
-make sure to use "-E" and "-p" arguments to patch so that empty files are
-deleted and full pathnames are provided to patch.  If your version of
-patch does not support "-E", you'll need to get a newer version.  Also note
-that you may need autoconf, autoheader and various other programs if you use
-diff files to update from one snapshot to the next.</p>
-
-<p>contrib/gcc_update can be used to apply diffs between successive
-snapshot versions and preserve relations between generated files so
-that autoconf, bison et al aren't needed. This is documented in
-comments in contrib/gcc_update. <BR> The file .brik provides a list of
-checksums of files in the snapshot, that may be checked using<BR>
-brik -C &lt; .brik</p>
 
 
 <hr>
@@ -710,7 +695,7 @@ final version of the Standard, it is.</p>
 
 
 <hr>
-<h2><a name="generated_files">autoconf, bison, xgettext, automake, etc</a></h2>
+<h2><a name="generated_files">Why do I need autoconf, bison, xgettext, automake, etc?</a></h2>
 
 <p>If you're using diffs up dated from one snapshot to the next, or
 if you're using the CVS repository, you may need several additional programs
@@ -743,16 +728,6 @@ Autoconf 2.13; work is in progress to fix this problem.  Also look at
 ftp://gcc.gnu.org/pub/gcc/infrastructure/</a> for any special versions
 of packages.</p>
 
-<hr>
-<h2><a name="conflicts">Conflicts when using cvs update</a></h2>
-
-<p>It is not uncommon to get CVS conflict messages for some generated files
-when updating your local sources from the CVS repository.  Typically such
-conflicts occur with bison or autoconf generated files.</p>
-
-<p>As long as you haven't been making modifications to the generated files
-or the generator files, it is safe to delete the offending file, then run
-cvs update again to get a new copy.</p>
 
 <hr>
 <h2><a name="gdb">Problems debugging GCC code</a></h2>
@@ -768,18 +743,6 @@ a copy of gdb-4.17 to work around the problem.
 <p>The GNU Ada front-end is not currently supported by GCC, but work
 is in progress to integrate GNU Ada into the GCC CVS repository and
 produce new releases based on current versions of GCC.</p>
-
-<hr>
-<h2><a name="cvssnapshots">Using CVS to download snapshots</a></h2>
-
-<p>It is possible to checkout specific snapshots with CVS or to check
-out the latest snapshot. See
-<a href="http://gcc.gnu.org/cvs.html">Anonymous read-only CVS access</a> 
-for details.</p>
-
-<p>We use CVS tags to identify each snapshot we make.  Snapshot tags have
-the form "gcc_ss_YYYYMMDD".  In addition, the latest official snapshot always
-has the tag "gcc_latest_snapshot".</p>
 
 
 <hr>
@@ -863,6 +826,15 @@ project to implement the ISO 14882 Standard C++ library as described
 in chapters 17 through 27 and annex D."</p>
 
 <p>libstdc++-v3 is enabled by default in 3.x releases of GCC.</p>
+
+<hr>
+<h2><a name="incremental">Will GCC someday include an incremental linker?</a></h2>
+
+<p>Incremental linking is part of the linker, not the compiler. As
+such, GCC doesn't have anything to do with incremental linking.
+Depending on what platform you use, it may be possible to tell GCC to
+use the platform's native linker (e.g., Solaris' ild(1)).</p>
+
 
 </body>
 </html>
