--- a/htdocs/snapshots.html
+++ b/htdocs/snapshots.html
@@ -12,12 +12,35 @@
 current development sources</a>, although we also make regular
 snapshots available for FTP download.</p>
 
+<p> We make snapshots of the GCC sources about once a week; there is no
+predetermined schedule.  These snapshots are intended to give everyone
+access to work in progress.  Any given snapshot may generate incorrect code
+or even fail to build.</p>
+
+<p>If you plan on downloading and using snapshots, we highly recommend you
+subscribe to the GCC mailing lists.  See <a href="lists.html">
+mailing lists</a> on the main GCC page for instructions on how to subscribe.</p>
+
+<p>When using the diff files to update from older snapshots to newer snapshots,
+make sure to use "-E" and "-p" arguments to patch so that empty files are
+deleted and full pathnames are provided to patch.  If your version of
+patch does not support "-E", you'll need to get a newer version.  Also note
+that you may need autoconf, autoheader and various other programs if you use
+diff files to update from one snapshot to the next.</p>
+
+<p>contrib/gcc_update can be used to apply diffs between successive
+snapshot versions and preserve relations between generated files so
+that autoconf, bison et al aren't needed. This is documented in
+comments in contrib/gcc_update. <BR> The file .brik provides a list of
+checksums of files in the snapshot, that may be checked using<BR>
+brik -C &lt; .brik</p>
+
 <p>Please use our
 <a href="ftp://ftp.freesoftware.com/pub/sourceware/gcc/snapshots/">main
 mirror site</a> or any of our other <a href="mirrors.html">mirrors</a>.</p>
 
 <p>In addition, some of our contributors also provide pre-built binaries
-of our current development sources on a regular base:</p>
+of our current development sources on a regular basis:</p>
 
 <ul>
 <li><a href="http://www.netwinder.org/build/gcc.html">
