--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -274,7 +274,10 @@ you don't you will get link errors).
 The <code>.h</code> names are still available, but are deprecated.
 
 <li><code>&lt;strstream&gt;</code> is deprecated, use
-<code>&lt;stringstream&gt;</code> instead.
+<code>&lt;sstream&gt;</code> instead. (The 3.0 BUGS file says
+<code>&lt;stringstream&gt;</code>, that was an error,
+<code>stringstream</code> is the class defined in
+<code>&lt;sstream&gt;</code>.)
 
 <li><code>streambuf::seekoff</code> &amp;
 <code>streambuf::seekpos</code> are private, instead use
