--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -36,10 +36,13 @@ number is maintained.</p>
 <table border=1 cellspacing=0 cellpadding=5>
 <tr><th>Release Name</th><th>Version number</th><th>Release date</th></tr>
 
+<tr><td><a href="gcc-3.0/gcc-3.0.html">GCC 3.0</a></td><td>3.0</td> <td>June 18, 2001</td></tr>
+
 <tr><td><a href="gcc-2.95/gcc-2.95.3.html">GCC 2.95.3</a></td><td>2.95.3</td> <td>March 16, 2001</td></tr>
 <tr><td><a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a></td><td>2.95.2</td> <td>October 24, 1999</td></tr>
 <tr><td><a href="gcc-2.95/gcc-2.95.1.html">GCC 2.95.1</a></td><td>2.95.1</td> <td>August 19, 1999</td></tr>
 <tr><td><a href="gcc-2.95/gcc-2.95.html">GCC 2.95</a></td>  <td>2.95</td>   <td>July 31, 1999</td></tr>
+
 <tr><td><a href="egcs-1.1/egcs-1.1.2.html">EGCS 1.1.2</a></td><td>2.91.66</td><td>March 15, 1999</td></tr>
 <tr><td><a href="egcs-1.1/egcs-1.1.1.html">EGCS 1.1.1</a></td><td>2.91.60</td><td>December 1, 1998</td></tr>
 <tr><td><a href="egcs-1.1/egcs-1.1.html">EGCS 1.1.0</a></td><td>2.91.57</td><td>September 3, 1998</td></tr>
@@ -57,6 +60,8 @@ Numbers in parentheses are EGCS release numbers.</p>
 
 <table border=1 cellspacing=0 cellpadding=5>
 <tr><th>GCC Version</th><th>Release date</th></tr>
+
+<tr><td>3.0</td> <td>June 18, 2001</td></tr>
 
 <tr><td>2.95.3</td> <td>March 16, 2001</td></tr>
 <tr><td>2.95.2</td> <td>October 24, 1999</td></tr>
