Update for GCC 3.0 release.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -104,10 +104,10 @@ cvs update again to get a new copy.</p>
 
 <h3>CVS tags and checkouts</h3>
 
-<p> You can check out the latest version of the GCC 2.95 release
+<p> You can check out the latest version of the GCC 3.0 release
 branch with the following command:
 
-<blockquote><code>cvs -z 9 co -rgcc-2_95-branch gcc</code></blockquote>
+<blockquote><code>cvs -z 9 co -rgcc-3_0-branch gcc</code></blockquote>
 
 <p>By changing the <code>-r</code> argument above you can check out
 particular releases or snapshots or the latest snapshot.  Other tags/branches
@@ -116,6 +116,7 @@ you may want to check out include:
 <ul>
   <li>gcc_latest_snapshot</li>
   <li>gcc_ss_yyyymmdd</li>
+  <li>gcc_3_0_release</li>
   <li>gcc-3_0-branch</li>
   <li>gcc-2_95_3</li>
   <li>gcc-2_95_2-release</li>
