--- a/htdocs/gcc-3.0/gcc-3.0.html
+++ b/htdocs/gcc-3.0/gcc-3.0.html
@@ -8,7 +8,7 @@
 
 <h1 align="center">GCC 3.0</h1>
 
-<p>TBA</p>
+<p>June 17, 2001</p>
 
 <p>The <a href="http://www.gnu.org/">GNU project</a> and the GCC
 developers are pleased to announce the release of GCC version 3.0.</p>
