--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -136,10 +136,7 @@ GNU/Linux) and cross targets and use an extensive
 <a href="http://gcc.gnu.org/testresults/">test suite</a> as well as a
 <a href="http://gcc.gnu.org/benchresults/">benchmark suite</a> to
 maintain and improve quality.
-<a href="gcc-2.95/gcc-2.95.3.html">GCC 2.95.3</a> is the current release.
-<a href="gcc-2.96.html">GCC 2.96</A> and 2.97 are development snapshots
-leading towards <a href="gcc-3.0/criteria.html">GCC 3.0</A> which we
-hope to release in the first half of 2001.
+<a href="gcc-3.0/gcc-3.0.html">GCC 3.0</a> is the current release.
 </p>
 
 <hr>
@@ -154,6 +151,11 @@ hope to release in the first half of 2001.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>June 18, 2001</b></dt>
+<dd>
+<a href="gcc-3.0/gcc-3.0.html">gcc-3.0</a> has been released.
+</dd>
 
 <dt><b>March 16, 2001</b></dt>
 <dd>
