Updates mentioning GCC 3.0 release.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -20,24 +20,28 @@
 </table>
 <br>
 
-The most current official release of GCJ/libgcj is 2.95.1. It's
-broken, and we don't recommend using it. Some time soon, GCC 3.0 
-will contain everything you need in a single source release.
-<p>
-We now recommend that you obtain development sources (see below), in
-preference to the old release version.
-<!---
+The most current official release of GCJ and libgcj is 3.0, which is included 
+with the GCC 3.0 source distribution. 
 <p>
 Follow the links on <a href="http://gcc.gnu.org/releases.html">http://gcc.gnu.org/releases.html</a>
 to download the compiler.  You will need either the full distribution,
 or each of the Core Compiler, C++ and Java distributions.
 <p>
-libgcj 2.95.1 is available
-from <a href="ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz">
-ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz</a> (but you
-haven't heard that from us).
--->
+
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ Precompiled Binary Packages
+ </th>
+</tr>
+</table>
 <p>
+Many GNU/Linux distributions now include relatively recent, "QA'ed" versions of 
+GCJ which should work out-of-the-box. Look for packages like "gcc-java" and
+"gcc-libgcj" to add Java language support to your existing GCC installation.
+<p>
+
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
@@ -61,20 +65,9 @@ If you are going to build from source you want to read the
 
 <p>
 <h3>Snapshots</h3>
-Snapshots are made about once a week.  They are available from
-<a href="http://gcc.gnu.org/snapshots.html">
-http://gcc.gnu.org/snapshots.html</a>. Starting from 12/11/2000, they
-contain everything you need (compiler + java runtime.)
-<p>
-
-<h3>RPM</h3>
-<UL>
-<LI>Red Hat Linux 7 includes relatively recent, "QA'ed" snapshots of the gcj and 
-libgcj development trees which should work out-of-the-box. Look for the 
-<B>gcc-java</B>, <B>libgcj</B>, and <B>libgcj-devel</B> RPM packages on 
-disc 2.
-</LI>
-</UL>
+Snapshots of the current CVS tree are made about once a week.  They are 
+available from <a href="http://gcc.gnu.org/snapshots.html">
+http://gcc.gnu.org/snapshots.html</a>.
 <p>
 
 <a name=cvs>
