--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -66,6 +66,14 @@ GDB and related tools are
 
 <table>
 <tr><td valign="top">
+<b>June 18, 2001</b>
+</td><td>
+<B>GCC 3.0 has been released!</B> Everything you need to build and run GCJ is now 
+included in a single source distribution. Download it from one of our
+<A HREF="../mirrors.html">mirror sites</A>.
+</td></tr>
+
+<tr><td valign="top">
 <b>June 4, 2001</b>
 </td><td>
 Per Bothner of Brainfood Inc has implemented an invocation interface
@@ -83,41 +91,6 @@ contributed by Hans Boehm. The new code should reduce memory consumption and
 improve performance for applications which do a lot of synchronization. 
 Currently, this code is enabled for IA-64 and X86 Linux.
 </td></tr>
-
-<tr><td valign="top">
-<b>April 25, 2001</b>
-</td><td>
-Bryce McKinlay merged <tt>java.security</tt> with Classpath.
-The new package is now JDK 1.2 compliant, and much more complete.
-</td></tr>
-
-<tr><td valign="top">
-<b>March 25, 2001</b>
-</td><td>
-It is now possible to call methods on Java interface references from C++ code
-via <A HREF="papers/cni/t1.html">CNI</A>, thanks to Bryce McKinlay's compiler
-work. <A HREF=http://gcc.gnu.org/ml/gcc-patches/2001-03/msg01483.html>Details.</A>
-</td></tr>
-
-<tr><td valign="top">
-<b>March 25, 2001</b>
-</td><td>
-Kevin B. Hendricks implemented the neccessary FFI support to get the 
-libgcj interpreter running on PowerPC. This is now one of our fully supported 
-targets!
-</td></tr>
-
-<tr><td valign="top">
-<b>March 7, 2001</b>
-</td><td>
-The first snapshot from the code branch that will become GCC 3.0 is 
-<A HREF="ftp://ftp.freesoftware.com/pub/sourceware/gcc/snapshots/">
-now available</A>. Snapshots from this branch will be made weekly. These
-include everything you need to build and run GCJ, and should be much
-more stable than the main development tree -- so try them out and help us
-find bugs!
-</td></tr>
-
 
 <tr><td valign="top">
 </td><td>
