--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -10,6 +10,40 @@
 
 <table>
 <tr><td valign="top">
+<b>April 25, 2001</b>
+</td><td>
+Bryce McKinlay merged <tt>java.security</tt> with Classpath.
+The new package is now JDK 1.2 compliant, and much more complete.
+</td></tr>
+
+<tr><td valign="top">
+<b>March 25, 2001</b>
+</td><td>
+It is now possible to call methods on Java interface references from C++ code
+via <A HREF="papers/cni/t1.html">CNI</A>, thanks to Bryce McKinlay's compiler
+work. <A HREF=http://gcc.gnu.org/ml/gcc-patches/2001-03/msg01483.html>Details.</A>
+</td></tr>
+
+<tr><td valign="top">
+<b>March 25, 2001</b>
+</td><td>
+Kevin B. Hendricks implemented the neccessary FFI support to get the 
+libgcj interpreter running on PowerPC. This is now one of our fully supported 
+targets!
+</td></tr>
+
+<tr><td valign="top">
+<b>March 7, 2001</b>
+</td><td>
+The first snapshot from the code branch that will become GCC 3.0 is 
+<A HREF="ftp://ftp.freesoftware.com/pub/sourceware/gcc/snapshots/">
+now available</A>. Snapshots from this branch will be made weekly. These
+include everything you need to build and run GCJ, and should be much
+more stable than the main development tree -- so try them out and help us
+find bugs!
+</td></tr>
+
+<tr><td valign="top">
 <b>February 8, 2001</b>
 </td><td>
 Made use of Warren Levy's change to the Mauve testsuite to handle regressions.
