Add new mirror.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -68,6 +68,7 @@ if you are mirroring the GCC pages so we can note it here!</p>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/sourceware.cygnus.com/pub/gcc/">sunsite.doc.ic.ac.uk</a>
 <li>US (California): <a href="ftp://ftp.freesoftware.com/pub/sourceware/gcc/">ftp.freesoftware.com</a>
 <li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs/">ftp.yggdrasil.com</a>
+<li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/sourceware.cygnus.com/pub/gcc/releases/">mirrors.laffeycomputer.com</a>
 </ul>
 
 <p>If you wish to host a new mirror site, please contact
