Add AVR documentation.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -72,7 +72,7 @@ tahoe. These are listed here just for completeness.
   <br><a href="http://www.amd.com/products/lpd/techdocs/techdocs.html#manuals2">
   AMD 29k Family technical documentation</a>
 
- <li>alpha: 
+ <li>alpha
    <br>Manufacturer: <a href="http://www.dec.com">Compaq (DEC)</a>  
    <br>The <a href="ftp://ftp.digital.com/pub/Digital/info/semiconductor/literature/dsc-library.html">Alpha
   OEM Documentation Library</a> offers the Alpha Architecture
@@ -86,6 +86,10 @@ tahoe. These are listed here just for completeness.
   <br>Manufacturer: Various, by licence from <a href="http://www.arm.com">ARM</a>
   <br>CPUs include: ARM7 and ARM7T series (eg. ARM7TDMI), ARM9 and StrongARM
   <br><a href="http://www.arm.com/Documentation/">ARM Documentation</a>
+
+ <li>AVR
+  <br>Manufacturer: <a href="http://www.atmel.com/atmel">Atmel</a>
+  <br><a href="http://www.atmel.com/atmel/products/prod23.htm">AVR Documentation</a>
 
  <li>c4x
    <br>Manufacturer: <a href="http://www.ti.com">Texas Instruments</a>
