* contrib.html: Added tag for Testing section. 	* old-news.html: Updated section on library testing and added 	links to more detailed descriptions. 	* test.html: Added section on General Runtime Testing and added 	a description of regression testing handling for Mauve.

--- a/htdocs/java/test.html
+++ b/htdocs/java/test.html
@@ -7,7 +7,23 @@
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
- Mauve
+ General Runtime Tests
+ </th>
+</tr>
+</table>
+<br>
+
+Runtime tests are executed via <tt>'make check'</tt> from the <tt>testsuite</tt>
+directory of the libjava hierarchy in the build tree.  Additional
+<a href="contrib.html#Testing">runtime tests</a> can be checked into the tree.
+Regression tests of the core packages in libgcj are run automatically via the
+<a href="#Mauve">Mauve test suite (described below)</a> if it is made available
+when the tests are being run.<p>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ <a name=Mauve>Mauve
  </th>
 </tr>
 </table>
@@ -20,6 +36,12 @@ encourage developers to contribute test cases to Mauve.<p>
 libgcj supports Mauve testing.  If you have Mauve checked out in,
 e.g., <tt>~/mauve/</tt>, then you can tell the libgcj to run the Mauve
 tests like so: <tt>make MAUVEDIR=~/mauve check</tt>.<p>
+
+To highlight regressions, a mechanism has been set up in <tt>mauve.exp</tt>
+to track expected failures by comparing against the contents of
+<tt>libjava/testsuite/libjava.mauve/xfails</tt> from the source hierarchy.
+This file should be updated as new (failing) tests are added to Mauve or when
+fixes are made to libgcj that correct for failing Mauve tests.<p>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
