2001-06-25  Phil Edwards  <pme@sources.redhat.com>
	* index.html:  Mention GCC 3.0 (as containing libstdc++-v3).
	* status.html:  Likwise.

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: index.html,v 1.10 2001/04/09 21:21:05 pme Exp $ -->
+<!-- $Id: index.html,v 1.11 2001/04/13 04:50:18 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -36,6 +36,9 @@
 <H3>News</H3>
 
 <DL>
+ <DT>2001-06-18
+ <DD> First major compiler release using libstdc++-v3 by default,
+   <A HREF="http://gcc.gnu.org/gcc-3.0/gcc-3.0.html">GCC 3.0</A>.
  <DT>2001-04-06
  <DD> Eleventh snapshot release, <A HREF="download.html">libstdc++-2.92.tar.gz</A>.
  <DT>2000-11-17
