--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: status.html,v 1.12 2001/05/23 17:38:57 pme Exp $ -->
+<!-- $Id: status.html,v 1.13 2001/05/25 20:27:08 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -11,6 +11,17 @@
 
 
 <H3>Status</H3>
+
+<HR>
+<P><STRONG>If you have downloaded GCC 3.0, STOP.  You have the most
+   recent libstdc++-v3 code available.  All library snapshots are older
+   than the code contained in GCC 3.0.</STRONG>  We will continue to
+   roll library snapshots on a pseudo-independant basis (at least, that's
+   the plan).  Once we have released another snapshot, superceding the
+   version in GCC 3.0, this paragraph will be replaced with that information.
+</P>
+<HR>
+
 <P>Compiling this library requires sources of a recent version of GCC.
    We suggest using CVS GCC.  The latest library snapshot has also been
    tested with this recent GCC snapshot:  <STRONG>2001-05-14</STRONG>,
