* test.html: Added GCJNAV for navigation style sheet.

--- a/htdocs/java/test.html
+++ b/htdocs/java/test.html
@@ -2,6 +2,8 @@
 <title>GCJ - Testing</title>
 <body bgcolor="white">
 
+<GCJNAV>
+
 <h1>Testing and the GCJ Project</h1>
 
 <table border="0" cellpadding="4" width="95%">
@@ -60,6 +62,8 @@ encourage developers to contribute test cases to Jacks.<p>
 Changes affecting the gcj front end can usefully be tested against
 Jacks.  We don't as yet have an automated mechanism to run Jacks tests
 in our test framework.<p>
+
+</GCJNAV>
 
 </body>
 </html>
